--- a/index.html
+++ b/index.html
@@ -29,17 +29,7 @@
                             <img class="main__button-img" src="./icons/arrow.svg" alt="Добавить фильм">
                         </button>
                     </form>
-                    <ul class="main__movie-list">
-                        <li class="main__movie-item">
-                            <div class="main__movie-group">
-                                <input class="main__movie-input" type="checkbox" id="movie1">
-                                <label class="main__movie-label" for="movie1">Остров проклятых</label>
-                            </div>
-                            <button class="main__movie-delete">
-                                <img class="main__movie-delete-img" src="./icons/delete.svg" alt="Удалить">
-                            </button>
-                        </li>
-                    </ul>
+                    <ul class="main__movie-list"></ul>
                 </div>
             </div>
         </div>
