--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                 <div class="main__content-container">
                     <form class="main__form-wrapper" action="#">
                         <input class="main__input" type="text" placeholder="Добавить фильм">
-                        <button class="main__button" type="submit">
+                        <button class="main__button">
                             <img class="main__button-img" src="./icons/arrow.svg" alt="Добавить фильм">
                         </button>
                     </form>
+                    <p class="main__undefinedOrNone">Введите название фильма!</p>
                     <ul class="main__movie-list"></ul>
                 </div>
             </div>
