--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <a class="footer__developer" href="https://github.com/codeByVladimir">codeByVladimir</a>
+        </div>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
