--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="icons/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Список фильмов</title>
@@ -26,7 +26,7 @@
                     <form class="main__form-wrapper" action="#">
                         <input class="main__input" type="text" placeholder="Добавить фильм">
                         <button class="main__button">
-                            <img class="main__button-img" src="./icons/arrow.svg" alt="Добавить фильм">
+                            <img class="main__button-img" src="./img/arrow.svg" alt="Добавить фильм">
                         </button>
                     </form>
                     <p class="main__undefinedOrNone">Введите название фильма!</p>
